src/objects/OpportunityLineItem/fields/Account_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Formula_Field__c</fullName>
    <formula>CASESAFEID(Opportunity.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>