src/objects/OpportunityLineItem/fields/Additional_Specifications__c.field-meta.xml
<CustomField>
    <fullName>Additional_Specifications__c</fullName>
    <label>Additional Specifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>