src/objects/OpportunityLineItem/fields/Adjusted_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Total_Price__c</fullName>
    <description>Captures the adjusted total price from the formula field - to be used for the roll up summary field on the Opportunity.</description>
    <label>Adjusted Total Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>