src/objects/OpportunityLineItem/fields/Alternate_Description__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Description__c</fullName>
    <label>Alternate Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>