src/objects/OpportunityLineItem/fields/Business_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Name__c</fullName>
    <description>This field is populated using a field update and is updated to the parent Product: Business Unit Name field when Created By field is not equal to NULL (essentially, upon record creation), whenever the record is saved.</description>
    <inlineHelpText>This field is populated using a field update and is updated to the parent Product: Business Unit Name field whenever the record is saved.</inlineHelpText>
    <label>Business Unit Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>