src/objects/OpportunityLineItem/fields/Competion__c.field-meta.xml
<CustomField>
    <fullName>Competion__c</fullName>
    <label>Completion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>