src/objects/OpportunityLineItem/fields/ConfigureBOMParts__c.field-meta.xml
<CustomField>
    <fullName>ConfigureBOMParts__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&quot;apex/AddBOMToOpportunity?id=&quot;+Id, &apos;Components&apos;,&apos;_top&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configure BOM Parts</label>
    <type>Text</type>
</CustomField>