src/objects/OpportunityLineItem/fields/Customer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_Number__c</fullName>
    <label>Customer Part Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>