src/objects/OpportunityLineItem/fields/Distributor_Advantage__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Advantage__c</fullName>
    <label>Distributor Advantage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>