src/objects/OpportunityLineItem/fields/DR_Expiration_date_Formula__c.field-meta.xml
<CustomField>
    <fullName>DR_Expiration_date_Formula__c</fullName>
    <formula>Opportunity.Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DR Expiration date</label>
    <type>Date</type>
</CustomField>