src/objects/OpportunityLineItem/fields/DR_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>DR_Formula_Field__c</fullName>
    <formula>Opportunity.Design_Registration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Registration</label>
    <type>Checkbox</type>
</CustomField>