src/objects/OpportunityLineItem/fields/DR_status_Formula__c.field-meta.xml
<CustomField>
    <fullName>DR_status_Formula__c</fullName>
    <formula>TEXT(  Opportunity.DR_Status__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DR status</label>
    <type>Text</type>
</CustomField>