src/objects/OpportunityLineItem/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this part line item should be included in the pipeline and forecast reports</inlineHelpText>
    <label>Forecast</label>
    <type>Checkbox</type>
</CustomField>