src/objects/OpportunityLineItem/fields/Has_Quantity_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Has_Quantity_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Quantity Schedule</label>
    <type>Checkbox</type>
</CustomField>