src/objects/OpportunityLineItem/fields/Has_Revenue_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Has_Revenue_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Revenue Schedule</label>
    <type>Checkbox</type>
</CustomField>