src/objects/OpportunityLineItem/fields/Has_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Has_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Schedule</label>
    <type>Checkbox</type>
</CustomField>