src/objects/OpportunityLineItem/fields/II_VI_DE_Long_Description__c.field-meta.xml
<CustomField>
    <fullName>II_VI_DE_Long_Description__c</fullName>
    <label>II-VI DE Long Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>