src/objects/OpportunityLineItem/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <label>Line #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>