src/objects/OpportunityLineItem/fields/LineItemID__c.field-meta.xml
<CustomField>
    <fullName>LineItemID__c</fullName>
    <description>Opportunity Line Item ID.</description>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LineItemID</label>
    <type>Text</type>
</CustomField>