src/objects/OpportunityLineItem/fields/Loaner_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Quantity__c</fullName>
    <label>Loaner Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>