src/objects/OpportunityLineItem/fields/Loaner_Required__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Required__c</fullName>
    <label>Loaner Required</label>
    <length>50</length>
    <type>Text</type>
</CustomField>