src/objects/OpportunityLineItem/fields/Long_Description_English__c.field-meta.xml
<CustomField>
    <fullName>Long_Description_English__c</fullName>
    <label>Long Description English</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>