src/objects/OpportunityLineItem/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>( UnitPrice  -  Standard_Cost__c ) / UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Price - Cost)/Price</inlineHelpText>
    <label>Margin</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>