src/objects/OpportunityLineItem/fields/Marketing_PN__c.field-meta.xml
<CustomField>
    <fullName>Marketing_PN__c</fullName>
    <formula>PricebookEntry.Product2.Marketing_P_N__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing PN</label>
    <type>Text</type>
</CustomField>