src/objects/OpportunityLineItem/fields/Min_Schedule_Date_Product__c.field-meta.xml
<CustomField>
    <fullName>Min_Schedule_Date_Product__c</fullName>
    <description>Created by EMD for reminder for Users to check the schedule dates whenever they update the Close Date.</description>
    <label>Min Schedule Date_Product</label>
    <type>Date</type>
</CustomField>