src/objects/OpportunityLineItem/fields/Non_released__c.field-meta.xml
<CustomField>
    <fullName>Non_released__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If a product on the products tab has this checked means this prodcut is not RTP</description>
    <inlineHelpText>If this box is checked this product is not RTP according to Glovia.</inlineHelpText>
    <label>Non-released</label>
    <type>Checkbox</type>
</CustomField>