src/objects/OpportunityLineItem/fields/Oppty_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Legacy_Id__c</fullName>
    <label>Oppty Legacy Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>