src/objects/OpportunityLineItem/fields/Price_Book_Id__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Id__c</fullName>
    <formula>PricebookEntryId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Id</label>
    <type>Text</type>
</CustomField>