src/objects/OpportunityLineItem/fields/Quantity_Schedule_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Schedule_Start_Date__c</fullName>
    <description>Earliest date listed on the Opportunity Product Quantity Schedule.</description>
    <label>Quantity Schedule Start Date</label>
    <type>Date</type>
</CustomField>