src/objects/OpportunityLineItem/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <inlineHelpText>Use to track the customer&apos;s requested ship date.</inlineHelpText>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>