src/objects/OpportunityLineItem/fields/Revenue_Schedule_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Schedule_Start_Date__c</fullName>
    <description>Earliest date listed on the Opportunity Product Revenue Schedule.</description>
    <label>Revenue Schedule Start Date</label>
    <type>Date</type>
</CustomField>