src/objects/OpportunityLineItem/fields/Rich_Text_English__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text_English__c</fullName>
    <label>Rich Text - English</label>
    <length>25000</length>
    <type>Html</type>
</CustomField>