src/objects/OpportunityLineItem/fields/Sales_Price_reflects_Opp_Currency__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_reflects_Opp_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, user is confirming that the Sales Price entered (and other monetary value fields entered, if applicable) reflects the Opportunity Currency field value on the parent Opportunity.</description>
    <inlineHelpText>If checked, user is confirming that the Sales Price entered (and other monetary value fields entered, if applicable) reflects the Opportunity Currency field value on the parent Opportunity.</inlineHelpText>
    <label>Sales Price reflects Opp. Currency</label>
    <type>Checkbox</type>
</CustomField>