src/objects/OpportunityLineItem/fields/SAM__c.field-meta.xml
<CustomField>
    <fullName>SAM__c</fullName>
    <formula>UnitPrice  *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>