src/objects/OpportunityLineItem/fields/Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date__c</fullName>
    <description>Date the Part ix expected to be shipped.</description>
    <inlineHelpText>Date the Part ix expected to be shipped.</inlineHelpText>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>