src/objects/OpportunityLineItem/fields/Similar_To_Part__c.field-meta.xml
<CustomField>
    <fullName>Similar_To_Part__c</fullName>
    <formula>PricebookEntry.Product2.Similar_To_Part__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Similar To Part</label>
    <type>Text</type>
</CustomField>