src/objects/OpportunityLineItem/fields/SOM__c.field-meta.xml
<CustomField>
    <fullName>SOM__c</fullName>
    <label>SOM %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>