src/objects/OpportunityLineItem/fields/Standard_Cost__c.field-meta.xml
<CustomField>
    <fullName>Standard_Cost__c</fullName>
    <description>To be populated from product record via Workflow-triggered field update.</description>
    <inlineHelpText>Standard Cost used for margin calc on this specific Opportunity (defaults from Product record if left blank)</inlineHelpText>
    <label>Standard Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>