src/objects/OpportunityLineItem/fields/Taxable__c.field-meta.xml
<CustomField>
    <fullName>Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate part level taxability for purchase orders.</description>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>