src/objects/OpportunityLineItem/fields/Total_Cost2__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost2__c</fullName>
    <description>Updated by workflow to multiply opportunity line item by quantity every item is edited</description>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>