src/objects/OpportunityLineItem/fields/X18_Digit_Opp_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Opp_Product_ID__c</fullName>
    <description>Created for syncing with Glovia.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18-Digit Opp. Product ID</label>
    <type>Text</type>
</CustomField>