src/objects/OpportunityLineItem/validationRules/Active_Product_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Product_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(Product2.Available__c)</errorConditionFormula>
    <errorMessage>Inactive and Obsolete Products selected 
Generic Product with No Child Product is Selected</errorMessage>
</ValidationRule>