src/objects/OpportunityLineItem/validationRules/Customer_Part_Number_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Part_Number_is_required</fullName>
    <active>true</active>
    <description>Customer Part Number is mandatory</description>
    <errorConditionFormula>AND(ISBLANK( Customer_Part_Number__c ) , OR(UPPER(PricebookEntry.Product2.Name)  = &apos;OTHER&apos;,LOWER(PricebookEntry.Product2.Name) =&apos;other&apos;))</errorConditionFormula>
    <errorDisplayField>Customer_Part_Number__c</errorDisplayField>
    <errorMessage>Customer Part Number is required field if Product selected is OTHER</errorMessage>
</ValidationRule>