src/objects/OpportunityLineItem/validationRules/WssProductvalidation.validationRule-meta.xml
<ValidationRule>
    <fullName>WssProductvalidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Product2.BU_Code__c = &apos;0040&apos;,NOT(  ISPICKVAL(Product2.Product_Family__c, &apos;WSS-OIG&apos;)  ), NOT(ISPICKVAL(Product2.Product_Family__c, &apos;WSS-OCM&apos;) ), NOT( CONTAINS( Opportunity.RSM__r.UserRole.Name , &apos;WSS&apos;))  )</errorConditionFormula>
    <errorMessage>RSM Should be WSS user to Add WSS product.</errorMessage>
</ValidationRule>